- Riformattate dimensioni tutte le view 700x750 - EventoView e EventoViewLettore riformattate con tabelle ordinabili per gli eventi